
2004-10-31  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/XMLDecoder/data/boolean.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/byte.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/short.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/int.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/long.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/float.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/double.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/simpleElements.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/intArray.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/growableIntArray.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/pointArray.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/growablePointArray.xml: Fixed comment
	* gnu/testlet/java/beans/XMLDecoder/data/list.xml: Fixed comment
	
2004-10-29  Noa Resare  <noa@resare.com>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java:
	New testcase.

2004-10-28  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/nio/ByteBuffer/direct.java:
	New testcases.

2004-10-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/AWTEvent/constants.java: New test.
	* gnu/testlet/java/awt/Event/constants.java: Likewise.
	
2004-10-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/net/MessageFormat/format14.java: New test.
	
2004-10-26  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/URLConnection/post.java:
	New testcase to test for implicit switch to POST method for http
	connections.

2004-10-25  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/BreakIterator/patho.java: New file.

2004-10-21  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/java/util/zip/InflaterInputStream/basic.java,
	gnu/testlet/java/util/ResourceBundle/getBundle.java:
	Fixed imports.
